ITL: Add more parameters for nscp-local check commands
nscp-local-cpu, -memory, -disk, -service and -counter

fixes #9264

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -21,6 +21,7 @@ if (!globals.contains("NscpPath")) {
 	NscpPath = dirname(msi_get_component_path("{5C45463A-4AE9-4325-96DB-6E239C034F93}"))
 }
 
+
 object CheckCommand "nscp-local" {
 	import  "plugin-check-command"
 
@@ -40,23 +41,98 @@ object CheckCommand "nscp-local" {
 			value = "$nscp_arguments$"
 			skip_key = true
 		}
+		"--show-all" = {
+			set_if = "$nscp_showall$"
+		}
+
 	}
 
 	vars.nscp_log_level = "critical"
 	vars.nscp_load_all = true
 	vars.nscp_boot = true
+	vars.nscp_showall = false
 }
 
 object CheckCommand "nscp-local-cpu" {
 	import  "nscp-local"
 
+	arguments += {
+		"--time" = {
+			value = "$nscp_cpu_time$"
+			repeat_key = true
+		}
+		"--warning" = {
+			value = "load>$nscp_cpu_warning$"
+		}
+		"--critical" = {
+			value = "load>$nscp_cpu_critical$"
+		}
+		"-a" = {
+			value = "$nscp_cpu_arguments$"
+			skip_key = true
+		}
+	}
+
 	vars.nscp_query = "check_cpu"
+	vars.nscp_showall = "$nscp_cpu_showall$"
+
+	vars.nscp_cpu_time = [ "1m", "5m", "15m" ]
+	vars.nscp_cpu_showall = true
+	vars.nscp_cpu_warning = 80
+	vars.nscp_cpu_critical = 90
 }
 
 object CheckCommand "nscp-local-memory" {
 	import  "nscp-local"
 
+	arguments += {
+		"--type=committed" = {
+			set_if = "$nscp_memory_committed$"
+		}
+		"--type=physical" = {
+			set_if = "$nscp_memory_physical$"
+		}
+		"--warning" = {
+			value = "$nscp_memory_op$ $nscp_memory_warning$"
+		}
+		"--critical" = {
+			value = "$nscp_memory_op$ $nscp_memory_critical$"
+		}
+		"-a" = {
+			value = "$nscp_memory_arguments$"
+			skip_key = true
+		}
+	}
+
 	vars.nscp_query = "check_memory"
+	vars.nscp_showall = "$nscp_memory_showall$"
+
+	vars.nscp_memory_op = {{
+		if (!macro("$nscp_memory_free$")) {
+			return "used >"
+		} else {
+			return "free <"
+		}
+	}}
+
+	vars.nscp_memory_commited = false
+	vars.nscp_memory_physical = true
+	vars.nscp_memory_free = true
+	vars.nscp_memory_warning = {{
+		if (!macro("$nscp_memory_free$")) {
+			return 80
+		} else {
+			return 20
+		}
+	}}
+	vars.nscp_memory_critical = {{
+		if (!macro("$nscp_memory_free$")) {
+			return 90
+		} else {
+			return 10
+		}
+	}}
+	vars.nscp_memory_showall = false
 }
 
 object CheckCommand "nscp-local-os-version" {
@@ -80,7 +156,34 @@ object CheckCommand "nscp-local-process" {
 object CheckCommand "nscp-local-service" {
 	import  "nscp-local"
 
+	arguments += {
+		"--service" = {
+			value = "$nscp_service_name$"
+			repeat_key = true
+		}
+		"--ok" = {
+			value = "$nscp_service_otype$='$nscp_service_ok$'"
+		}
+		"--warning" = {
+			value = "$nscp_service_wtype$='$nscp_service_warning$'"
+		}
+		"--critical" = {
+			value = "$nscp_service_ctype$='$nscp_service_critical$'"
+		}
+		"-a" = {
+			value = "$nscp_service_arguments$"
+			skip_key = true
+		}
+	}
+
 	vars.nscp_query = "check_service"
+	vars.nscp_showall = "$nscp_service_showall$"
+
+	vars.nscp_service_showall = true
+	vars.nscp_service_type = "state"
+	vars.nscp_service_otype = vars.nscp_service_type
+	vars.nscp_service_wtype = vars.nscp_service_type
+	vars.nscp_service_ctype = vars.nscp_service_type
 }
 
 object CheckCommand "nscp-local-uptime" {
