--- a/lib/hello/CMakeLists.txt
+++ b/lib/hello/CMakeLists.txt
@@ -15,12 +15,10 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-mkclass_target(hello.ti hello.tcpp hello.thpp)
-
-mkembedconfig_target(hello-app.conf hello-app.cpp)
+mkclass_target(helloapplication.ti helloapplication.tcpp helloapplication.thpp)
 
 set(hello_SOURCES
-  hello.cpp hello.thpp hello-app.cpp
+  helloapplication.cpp helloapplication.thpp
 )
 
 if(ICINGA2_UNITY_BUILD)
