Add check command nginx_status
fixes #10374

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -248,3 +248,72 @@ object CheckCommand "squid" {
 	vars.squid_hostname = "$check_address$"
 	vars.squid_client = "/usr/bin/squidclient"
 }
+
+object CheckCommand "nginx_status" {
+		import "plugin-check-command"
+		import "ipv4-or-ipv6"
+
+		command = [ PluginContribDir + "/check_nginx_status.pl" ]
+
+		arguments = {
+				"--hostname" = {
+						value = "$nginx_status_host_address$"
+						description = "name or IP address of host to check"
+				}
+				"--port" = {
+						value = "$nginx_status_port$"
+						description = "the http port"
+				}
+				"--url" = {
+						value = "$nginx_status_url$"
+						description = "Specific URL to use, instead of the default 'http://<nginx_status_hostname>/nginx_status'"
+				}
+				"--servername" = {
+						value = "$nginx_status_servername$"
+						description = "ServerName, use it if you specified an IP in -H to match the good Virtualhost in your target"
+				}
+				"--ssl" = {
+						set_if = "$nginx_status_ssl$"
+						description = "Wether we should use HTTPS instead of HTTP"
+				}
+				"--disable-sslverifyhostname" = {
+						set_if = "$nginx_status_disable_sslverify$"
+						description = "Disable SSL hostname verification"
+				}
+				"--user" = {
+						value = "$nginx_status_user$"
+						description = "Username for basic auth"
+				}
+				"--pass" = {
+						value = "$nginx_status_pass$"
+						description = "Password for basic auth"
+				}
+				"--realm" = {
+						value = "$nginx_status_realm$"
+						description = "Realm for basic auth"
+				}
+				"--maxreach" = {
+						value = "$nginx_status_maxreach$"
+						description = "Number of max processes reached (since last check) that should trigger an alert"
+				}
+				"--timeout" = {
+						value = "$nginx_status_timeout$"
+						description = "timeout in seconds"
+				}
+				"--warn" = {
+						value = "$nginx_status_warn$"
+						description = "number of active connections, ReqPerSec or ConnPerSec that will cause a WARNING"
+				}
+				"--critical" = {
+						value = "$nginx_status_critical$"
+						description = "number of active connections, ReqPerSec or ConnPerSec that will cause a CRITICAL"
+				}
+		}
+
+		vars.nginx_status_host_address = "$check_address$"
+		vars.nginx_status_ssl = false
+		vars.nginx_status_disable_sslverify = false
+		vars.nginx_status_warn = "10000,100,200"
+		vars.nginx_status_critical = "20000,200,300"
+		vars.nginx_status_timeout = 15
+}
