--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -557,6 +557,7 @@ object CheckCommand "imap" {
 	arguments = {
 		"-H" = "$imap_address$"
 		"-p" = "$imap_port$"
+		"-t" = "$imap_timeout$"
 	}
 
 	vars.imap_address = "$check_address$"
@@ -571,6 +572,7 @@ object CheckCommand "simap" {
 	arguments = {
 		"-H" = "$simap_address$"
 		"-p" = "$simap_port$"
+		"-t" = "$simap_timeout$"
 	}
 
 	vars.simap_address = "$check_address$"
@@ -585,6 +587,7 @@ object CheckCommand "pop" {
 	arguments = {
 		"-H" = "$pop_address$"
 		"-p" = "$pop_port$"
+		"-t" = "$pop_timeout$"
 	}
 
 	vars.pop_address = "$check_address$"
@@ -599,6 +602,7 @@ object CheckCommand "spop" {
 	arguments = {
 		"-H" = "$spop_address$"
 		"-p" = "$spop_port$"
+		"-t" = "$spop_timeout$"
 	}
 
 	vars.spop_address = "$check_address$"
