Add port configuration to snmp checks

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1021,6 +1021,7 @@ object CheckCommand "snmp" {
 		"-l" = "$snmp_label$"
 		"-u" = "$snmp_units$"
 		"-t" = "$snmp_timeout$"
+		"-p" = "$snmp_port$"
 		"--invert-search" = {
 			set_if = "$snmp_invert_search$"
 			description = "Invert search result and return CRITICAL if found"
