Fix: 'dig_lookup' custom attribute for the 'dig' check command isn't optional
fixes #10433

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1223,7 +1223,10 @@ object CheckCommand "dig" {
 	arguments = {
 		"-H" = "$dig_server$"
 		"-p" = "$dig_port$"
-		"-l" = "$dig_lookup$"
+		"-l" = {
+			value = "$dig_lookup$"
+			required = true
+		}
 		"-T" = "$dig_record_type$"
 		"-a" = "$dig_expected_address$"
 		"-A" = "$dig_arguments$"
