Make check apt command timeout configurable

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1148,6 +1148,13 @@ object CheckCommand "apt" {
 	import "plugin-check-command"
 
 	command = [ PluginDir + "/check_apt" ]
+
+	arguments = {
+		"-t" = {
+			value = "$apt_timeout$"
+			description = "Seconds before connection times out"
+		}
+	}
 }
 
 object CheckCommand "dhcp" {
