Documentation: Reorganize Livestatus and alternative Frontends
fixes #10482

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,15 +16,14 @@ pages:
 - [12-agent-based-checks.md, Additional Agent-based Checks]
 - [13-distributed-monitoring-ha.md, Distributed Monitoring and High Availability]
 - [14-addons-plugins.md, Addons and Plugins]
-- [15-alternative-frontends.md, Alternative Frontends]
-- [16-livestatus.md, Livestatus]
-- [17-troubleshooting.md, Troubleshooting]
-- [18-upgrading-icinga-2.md, Upgrading Icinga 2]
-- [19-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
-- [20-language-reference.md, Language Reference]
-- [21-library-reference.md, Library Reference]
-- [22-debug.md, Debug]
-- [23-appendix.md, Appendix]
+- [15-features.md, Features]
+- [16-troubleshooting.md, Troubleshooting]
+- [17-upgrading-icinga-2.md, Upgrading Icinga 2]
+- [18-language-reference.md, Language Reference]
+- [19-library-reference.md, Library Reference]
+- [20-debug.md, Debug]
+- [21-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
+- [22-appendix.md, Appendix]
 theme: readthedocs
 markdown_extensions: [smarty]
 extra_javascript: [scroll.js]
