--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1702,3 +1702,40 @@ object CheckCommand "mysql" {
 
 	vars.mysql_hostname = "$check_address$"
 }
+
+object CheckCommand "negate" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/negate" ]
+
+	arguments = {
+		"-t" = "$negate_timeout$"
+		"-T" = "$negate_timeout_result$"
+		"-o" = "$negate_ok$"
+		"-w" = "$negate_warning$"
+		"-c" = "$negate_critical$"
+		"-s" = {
+			set_if = "$negate_substitute$"
+		}
+		"--wrapped-plugin" = {
+			value = {{
+				var command = macro("$negate_command$")
+				var arguments = macro("$negate_arguments$")
+
+				if (typeof(command) == String && !arguments) {
+					return command
+				}
+
+				var escaped_args = []
+				for (arg in resolve_arguments(command, arguments)) {
+					escaped_args.add(arg)
+				}
+				return escaped_args.join(" ")
+			}}
+			skip_key = true
+			order = 1
+		}
+	}
+
+	vars.negate_timeout_result = "UNKNOWN"
+}
