Add check command mysql
fixes #10511

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1667,3 +1667,38 @@ object CheckCommand "pgsql" {
 	vars.pgsql_hostname = "$check_address$"
 }
 
+object CheckCommand "mysql" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_mysql" ]
+
+	arguments = {
+		"-H" = "$mysql_hostname$"
+		"-P" = "$mysql_port$"
+		"-n" = {
+			set_if = "$mysql_ignore_auth$"
+		}
+		"-s" = "$mysql_socket$"
+		"-d" = "$mysql_database$"
+		"-f" = "$mysql_file$"
+		"-g" = "$mysql_group$"
+		"-u" = "$mysql_username$"
+		"-p" = "$mysql_password$"
+		"-S" = {
+			set_if = "$mysql_check_slave$"
+		}
+		"-w" = "$mysql_warning$"
+		"-c" = "$mysql_critical$"
+		"-l" = {
+			set_if = "$mysql_ssl$"
+		}
+		"-C" = "$mysql_cacert$"
+		"-a" = "$mysql_cert$"
+		"-k" = "$mysql_key$"
+		"-D" = "$mysql_cadir$"
+		"-L" = "$mysql_ciphers$"
+	}
+
+	vars.mysql_hostname = "$check_address$"
+}
