Add a check command for check_file_age. Add a deprecation note for check_ldaps to check_ldap.
refs #6225

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2104,3 +2104,38 @@ object CheckCommand "negate" {
 
 	vars.negate_timeout_result = "UNKNOWN"
 }
+
+object CheckCommand "file_age" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_file_age" ]
+
+	arguments = {
+		"-w" = {
+			value = "$file_age_warning_time$"
+			description = "File must be no more than this many seconds old (default: 240s)"
+		}
+		"-c" = {
+			value = "$file_age_critical_time$"
+			description = "File must be no more than this many seconds old (default: 600s)"
+		}
+		"-W" = {
+			value = "$file_age_warning_size$"
+			description = "File must be at least this many bytes long"
+		}
+		"-C" = {
+			value = "$file_age_critical_size$"
+			description = "File must be at least this many bytes long (default: 0B)"
+		}
+		"-i" = {
+			set_if = "$file_age_ignoremissing$"
+			description = "return OK if the file does not exist"
+		}
+		"-f" = {
+			value = "$file_age_file$"
+			description = "File to monitor"
+		}
+	}
+
+	vars.file_age_ignoremissing = false
+}
