Add missing parameters for jmx4perl check command
fixes #10503

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -192,6 +192,20 @@ object CheckCommand "jmx4perl" {
 						value = "$jmx4perl_timeout$"
 						description = "Seconds before plugin times out (default: 15)"
 				}
+				"--config" = {
+						value = "$jmx4perl_config$"
+						description = "Path to configuration file."
+				}
+				"--server" = {
+						value = "$jmx4perl_server$"
+						description = "Symbolic name of server url to use, which needs to be configured in the configuration file."
+				}
+				"--check" = {
+						value = "$jmx4perl_check$"
+						description = "Name of a check configuration as defined in the configuration file, use array if you need arguments."
+						order = 1
+						repeat_key = false
+				}
 		}
 
 		vars.jmx4perl_url = "http://$address$:8080/jolokia"
