ITL: Add missing check_apt arguments
refs #10504

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1181,6 +1181,38 @@ object CheckCommand "apt" {
 	import "plugin-check-command"
 
 	command = [ PluginDir + "/check_apt" ]
+
+	arguments = {
+		"--extra-opts" = {
+			value = "$apt_extra_opts$"
+			description = "Read options from an ini file."
+		}
+		"--upgrade" = {
+			value = "$apt_upgrade$"
+			description = "[Default] Perform an upgrade. If an optional OPTS argument is provided, apt-get will be run with these command line options instead of the default."
+		}
+		"--dist-upgrade" = {
+			value = "$apt_dist_upgrade$"
+			description = "Perform a dist-upgrade instead of normal upgrade. Like with -U OPTS can be provided to override the default options."
+		}
+		"--include" = {
+			value = "$apt_include$"
+			description = "Include only packages matching REGEXP. Can be specified multiple times the values will be combined together."
+		}
+		"--exclude" = {
+			value = "$apt_exclude$"
+			description = "Exclude packages matching REGEXP from the list of packages that would otherwise be included. Can be specified multiple times."
+		}
+		"--critical" = {
+			value = "$apt_critical$"
+			description = "If the full package information of any of the upgradable packages match this REGEXP, the plugin will return CRITICAL status. Can be specified multiple times."
+		}
+		"--timeout" = {
+			value = "$apt_timeout$"
+			description = "Seconds before plugin times out (default: 10)."
+		}
+	}
+
 }
 
 object CheckCommand "dhcp" {
