ITL: Increase the default timeout for OS checks (update-windows, yum, apt)
fixes #10504

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -277,7 +277,8 @@ object CheckCommand "update-windows" {
 			description = "Treat 'may need update' as 'definitely needs update'"
 		}
 	}
-	
+
+	timeout = 5m
 }
 
 object CheckCommand "uptime-windows" {
