--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -105,4 +105,6 @@ object CheckCommand "yum" {
 	vars.yum_cache_only = false
 	vars.yum_no_warn_on_lock = false
 	vars.yum_no_warn_on_updates = false
+
+	timeout = 5m
 }
