Add a check command for check_ide_smart
refs #6225

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2139,3 +2139,17 @@ object CheckCommand "file_age" {
 
 	vars.file_age_ignoremissing = false
 }
+
+object CheckCommand "smart" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_ide_smart" ]
+
+	arguments = {
+		"-d" = {
+			value = "$smart_device$"
+			description = "Name of a local hard drive to monitor"
+			required = true
+		}
+	}
+}
