--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1369,6 +1369,10 @@ object CheckCommand "by_ssh" {
 		"-w" = "$by_ssh_warn$"
 		"-c" = "$by_ssh_crit$"
 		"-t" = "$by_ssh_timeout$"
+		"-o" = {
+			value = "$by_ssh_options$"
+			description = "Provide ssh options (may be repeated)"
+		}
 	}
 
 	vars.by_ssh_address = "$check_address$"
