ITL: add check_http args for SSL version forcing
The -S argument of check_http can take a number, which forces the connection to
use a specific SSL version.  This is implemented as multiple options because
check_http does not accept the number following -S if they are separated.

fixes #10358

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -331,6 +331,15 @@ object CheckCommand "http" {
 		"-S" = {
 			set_if = "$http_ssl$"
 		}
+		"-S1" = {
+			set_if = "$http_ssl_force_tlsv1$"
+		}
+		"-S2" = {
+			set_if = "$http_ssl_force_sslv2$"
+		}
+		"-S3" = {
+			set_if = "$http_ssl_force_sslv3$"
+		}
 		"--sni" = {
 			set_if = "$http_sni$"
 		}
