Add a check command for check_breeze Add a check command for check_flexlm Add a check command for check_game
refs #6225

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2153,3 +2153,104 @@ object CheckCommand "smart" {
 		}
 	}
 }
+
+object CheckCommand "breeze" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_breeze" ]
+
+	arguments = {
+		"-H" = {
+			value = "$breeze_hostname$"
+			description = "Name or IP address of host to check"
+			required = true
+		}
+		"-C" = {
+			value = "$breeze_community$"
+			description = "SNMPv1 community (default public)"
+		}
+		"-w" = {
+			value = "$breeze_warning$"
+			description = "Percentage strength below which a WARNING status will result"
+			required = true
+		}
+		"-c" = {
+			value = "$breeze_critical$"
+			description = "Percentage strength below which a CRITICAL status will result"
+			required = true
+		}
+	}
+
+	vars.breeze_hostname = "$check_address$"
+	vars.breeze_warning = "50"
+	vars.breeze_critical = "20"
+}
+
+object CheckCommand "flexlm" {
+	import "plugin-check-command"
+
+	command = [ PluginDir + "/check_flexlm" ]
+
+	arguments = {
+		"-F" = {
+			value = "$flexlm_licensefile$"
+			description = "Name of license file (usually license.dat)"
+			required = true
+		}
+		"-t" = {
+			value = "$flexlm_timeout$"
+			description = "Plugin time out in seconds (default = 15)"
+		}
+	}
+}
+
+object CheckCommand "game" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_game" ]
+
+	arguments = {
+		"-P" = {
+			value = "$game_port$"
+			description = "Port to connect to"
+		}
+		"-t" = {
+			value = "$game_timeout$"
+			description = "Seconds before connection times out (default: 10)"
+		}
+		"-g" = {
+			value = "$game_gamefield$"
+			description = "Field number in raw qstat output that contains game name"
+		}
+		"-m" = {
+			value = "$game_mapfield$"
+			description = "Field number in raw qstat output that contains map name"
+		}
+		"-p" = {
+			value = "$game_pingfield$"
+			description = "Field number in raw qstat output that contains ping time"
+		}
+		"-G" = {
+			value = "$game_gametime$"
+			description = "Field number in raw qstat output that contains game time"
+		}
+		"-H" = {
+			value = "$game_hostname$"
+			description = "Name of the host running the game"
+		}
+		"game" = {
+			value = "$game_game$"
+			description = "Name of the game"
+			order = 1
+			skip_key = true
+		}
+		"ipaddress" = {
+			value = "$game_ipaddress$"
+			description = "Ipaddress of the game server to query"
+			order = 2
+			skip_key = true
+		}
+	}
+}
