Add ipv4 / ipv6 support for all monitoring-plugins Add some options to check_smtp/check_ssmtp/check_imap/check_simap/check_pop/check_spop
Refs #10669

Signed-off-by: Gunnar Beutner <gunnar@beutner.name>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -248,11 +248,11 @@ object CheckCommand "tcp" {
 		}
 		"-4" = {
 			set_if = "$tcp_ipv4$"
-			description = "Use IPv4 only"
+			description = "Use IPv4 connection"
 		}
 		"-6" = {
 			set_if = "$tcp_ipv6$"
-			description = "Use IPv6 only"
+			description = "Use IPv6 connection"
 		}
 	}
 
@@ -304,11 +304,11 @@ object CheckCommand "udp" {
 		"-q" = "$udp_quit$"
 		"-4" = {
 			set_if = "$udp_ipv4$"
-			description = "Use IPv4 only"
+			description = "Use IPv4 connection"
 		}
 		"-6" = {
 			set_if = "$udp_ipv6$"
-			description = "Use IPv6 only"
+			description = "Use IPv6 connection"
 		}
 	}
 
@@ -429,11 +429,11 @@ object CheckCommand "http" {
 		}
 		"-4" = {
 			set_if = "$http_ipv4$"
-			description = "Use IPv4 only"
+			description = "Use IPv4 connection"
 		}
 		"-6" = {
 			set_if = "$http_ipv6$"
-			description = "Use IPv6 only"
+			description = "Use IPv6 connection"
 		}
 	}
 
@@ -531,6 +531,14 @@ object CheckCommand "ftp" {
 			value = "$ftp_timeout$"
 			description = "Seconds before connection times out. Defaults to 10."
 		}
+		"-4" = {
+			set_if = "$ftp_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$ftp_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.ftp_address = "$check_address$"
@@ -538,6 +546,8 @@ object CheckCommand "ftp" {
 	vars.ftp_refuse = "crit"
 	vars.ftp_mismatch = "warn"
 	vars.ftp_timeout = 10
+	vars.check_ipv4 = "$ftp_ipv4$"
+	vars.check_ipv6 = "$ftp_ipv6$"
 }
 
 object CheckCommand "smtp" {
@@ -555,7 +565,10 @@ object CheckCommand "smtp" {
 		"-R" = "$smtp_response$"
 		"-F" = "$smtp_helo_fqdn$"
 		"-D" = "$smtp_certificate_age$"
-		"-S" = "$smtp_starttls$"
+		"-S" = {
+			set_if = "$smtp_starttls$"
+			description = "Use STARTTLS for the connection."
+		}
 		"-A" = "$smtp_authtype$"
 		"-U" = "$smtp_authuser$"
 		"-P" = "$smtp_authpass$"
@@ -563,9 +576,19 @@ object CheckCommand "smtp" {
 		"-w" = "$smtp_warning$"
 		"-c" = "$smtp_critical$"
 		"-t" = "$smtp_timeout$"
+		"-4" = {
+			set_if = "$smtp_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$smtp_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.smtp_address = "$check_address$"
+	vars.check_ipv4 = "$smtp_ipv4$"
+	vars.check_ipv6 = "$smtp_ipv6$"
 }
 
 object CheckCommand "ssmtp" {
@@ -573,12 +596,47 @@ object CheckCommand "ssmtp" {
 	import "ipv4-or-ipv6"
 
 	command = [ PluginDir + "/check_ssmtp" ]
+
 	arguments = {
 		"-H" = "$ssmtp_address$"
 		"-p" = "$ssmtp_port$"
+		"-E" = "$ssmtp_escape$"
+		"-s" = "$ssmtp_send$"
+		"-e" = "$ssmtp_expect$"
+		"-A" = {
+			set_if = "$ssmtp_all$"
+			description = "All expect strings need to occur in server response. Default is any."
+		}
+		"-q" = "$ssmtp_quit$"
+		"-r" = "$ssmtp_refuse$"
+		"-M" = "$ssmtp_mismatch$"
+		"-j" = {
+			set_if = "$ssmtp_jail$"
+			description = "Hide output from TCP socket."
+		}
+		"-m" = "$ssmtp_maxbytes$"
+		"-d" = "$ssmtp_delay$"
+		"-D" = "$ssmtp_certificate_age$"
+		"-S" = {
+			set_if = "$ssmtp_ssl$"
+			description = "Use SSL for the connection."
+		}
+		"-w" = "$ssmtp_warning$"
+		"-c" = "$ssmtp_critical$"
+		"-t" = "$ssmtp_timeout$"
+		"-4" = {
+			set_if = "$ssmtp_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$ssmtp_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.ssmtp_address = "$check_address$"
+	vars.check_ipv4 = "$ssmtp_ipv4$"
+	vars.check_ipv6 = "$ssmtp_ipv6$"
 }
 
 object CheckCommand "imap" {
@@ -590,25 +648,91 @@ object CheckCommand "imap" {
 	arguments = {
 		"-H" = "$imap_address$"
 		"-p" = "$imap_port$"
+		"-E" = "$imap_escape$"
+		"-s" = "$imap_send$"
+		"-e" = "$imap_expect$"
+		"-A" = {
+			set_if = "$imap_all$"
+			description = "All expect strings need to occur in server response. Default is any."
+		}
+		"-q" = "$imap_quit$"
+		"-r" = "$imap_refuse$"
+		"-M" = "$imap_mismatch$"
+		"-j" = {
+			set_if = "$imap_jail$"
+			description = "Hide output from TCP socket."
+		}
+		"-m" = "$imap_maxbytes$"
+		"-d" = "$imap_delay$"
+		"-D" = "$imap_certificate_age$"
+		"-S" = {
+			set_if = "$imap_ssl$"
+			description = "Use SSL for the connection."
+		}
+		"-w" = "$imap_warning$"
+		"-c" = "$imap_critical$"
 		"-t" = "$imap_timeout$"
+		"-4" = {
+			set_if = "$imap_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$imap_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.imap_address = "$check_address$"
+	vars.check_ipv4 = "$imap_ipv4$"
+	vars.check_ipv6 = "$imap_ipv6$"
 }
 
 object CheckCommand "simap" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	  command = [ PluginDir + "/check_simap" ]
+	command = [ PluginDir + "/check_simap" ]
 
 	arguments = {
 		"-H" = "$simap_address$"
 		"-p" = "$simap_port$"
+		"-E" = "$simap_escape$"
+		"-s" = "$simap_send$"
+		"-e" = "$simap_expect$"
+		"-A" = {
+			set_if = "$simap_all$"
+			description = "All expect strings need to occur in server response. Default is any."
+		}
+		"-q" = "$simap_quit$"
+		"-r" = "$simap_refuse$"
+		"-M" = "$simap_mismatch$"
+		"-j" = {
+			set_if = "$simap_jail$"
+			description = "Hide output from TCP socket."
+		}
+		"-m" = "$simap_maxbytes$"
+		"-d" = "$simap_delay$"
+		"-D" = "$simap_certificate_age$"
+		"-S" = {
+			set_if = "$simap_ssl$"
+			description = "Use SSL for the connection."
+		}
+		"-w" = "$simap_warning$"
+		"-c" = "$simap_critical$"
 		"-t" = "$simap_timeout$"
+		"-4" = {
+			set_if = "$simap_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$simap_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.simap_address = "$check_address$"
+	vars.check_ipv4 = "$simap_ipv4$"
+	vars.check_ipv6 = "$simap_ipv6$"
 }
 
 object CheckCommand "pop" {
@@ -620,10 +744,43 @@ object CheckCommand "pop" {
 	arguments = {
 		"-H" = "$pop_address$"
 		"-p" = "$pop_port$"
+		"-E" = "$pop_escape$"
+		"-s" = "$pop_send$"
+		"-e" = "$pop_expect$"
+		"-A" = {
+			set_if = "$pop_all$"
+			description = "All expect strings need to occur in server response. Default is any."
+		}
+		"-q" = "$pop_quit$"
+		"-r" = "$pop_refuse$"
+		"-M" = "$pop_mismatch$"
+		"-j" = {
+			set_if = "$pop_jail$"
+			description = "Hide output from TCP socket."
+		}
+		"-m" = "$pop_maxbytes$"
+		"-d" = "$pop_delay$"
+		"-D" = "$pop_certificate_age$"
+		"-S" = {
+			set_if = "$pop_ssl$"
+			description = "Use SSL for the connection."
+		}
+		"-w" = "$pop_warning$"
+		"-c" = "$pop_critical$"
 		"-t" = "$pop_timeout$"
+		"-4" = {
+			set_if = "$pop_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$pop_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.pop_address = "$check_address$"
+	vars.check_ipv4 = "$pop_ipv4$"
+	vars.check_ipv6 = "$pop_ipv6$"
 }
 
 object CheckCommand "spop" {
@@ -635,10 +792,43 @@ object CheckCommand "spop" {
 	arguments = {
 		"-H" = "$spop_address$"
 		"-p" = "$spop_port$"
+		"-E" = "$spop_escape$"
+		"-s" = "$spop_send$"
+		"-e" = "$spop_expect$"
+		"-A" = {
+			set_if = "$spop_all$"
+			description = "All expect strings need to occur in server response. Default is any."
+		}
+		"-q" = "$spop_quit$"
+		"-r" = "$spop_refuse$"
+		"-M" = "$spop_mismatch$"
+		"-j" = {
+			set_if = "$spop_jail$"
+			description = "Hide output from TCP socket."
+		}
+		"-m" = "$spop_maxbytes$"
+		"-d" = "$spop_delay$"
+		"-D" = "$spop_certificate_age$"
+		"-S" = {
+			set_if = "$spop_ssl$"
+			description = "Use SSL for the connection."
+		}
+		"-w" = "$spop_warning$"
+		"-c" = "$spop_critical$"
 		"-t" = "$spop_timeout$"
+		"-4" = {
+			set_if = "$spop_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$spop_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.spop_address = "$check_address$"
+	vars.check_ipv4 = "$spop_ipv4$"
+	vars.check_ipv6 = "$spop_ipv6$"
 }
 
 object CheckCommand "ntp_time" {
@@ -655,9 +845,19 @@ object CheckCommand "ntp_time" {
 		"-c" = "$ntp_critical$"
 		"-o" = "$ntp_timeoffset$"
 		"-t" = "$ntp_timeout$"
+		"-4" = {
+			set_if = "$ntp_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$ntp_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.ntp_address = "$check_address$"
+	vars.check_ipv4 = "$ntp_ipv4$"
+	vars.check_ipv6 = "$ntp_ipv6$"
 }
 
 object CheckCommand "ntp_peer" {
@@ -678,9 +878,19 @@ object CheckCommand "ntp_peer" {
 		"-m" = "$ntp_wsource$"
 		"-n" = "$ntp_csource$"
 		"-t" = "$ntp_timeout$"
+		"-4" = {
+			set_if = "$ntp_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$ntp_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.ntp_address = "$check_address$"
+	vars.check_ipv4 = "$ntp_ipv4$"
+	vars.check_ipv6 = "$ntp_ipv6$"
 }
 
 object CheckCommand "ssh" {
@@ -697,9 +907,19 @@ object CheckCommand "ssh" {
 			skip_key = true
 			order = 1
 		}
+		"-4" = {
+			set_if = "$ssh_ipv4$"
+			description = "Use IPv4 connection"
+		}
+		"-6" = {
+			set_if = "$ssh_ipv6$"
+			description = "Use IPv6 connection"
+		}
 	}
 
 	vars.ssh_address = "$check_address$"
+	vars.check_ipv4 = "$ssh_ipv4$"
+	vars.check_ipv6 = "$ssh_ipv6$"
 }
 
 object CheckCommand "disk" {
@@ -1300,9 +1520,19 @@ object CheckCommand "dig" {
 		"-w" = "$dig_warning$"
 		"-c" = "$dig_critical$"
 		"-t" = "$dig_timeout$"
+		"-4" = {
+			set_if = "$dig_ipv4$"
+			description = "Force dig to only use IPv4 query transport"
+		}
+		"-6" = {
+			set_if = "$dig_ipv6$"
+			description = "Force dig to only use IPv6 query transport"
+		}
 	}
 
 	vars.dig_server = "$check_address$"
+	vars.check_ipv4 = "$dig_ipv4$"
+	vars.check_ipv6 = "$dig_ipv6$"
 }
 
 object CheckCommand "nscp" {
@@ -1373,10 +1603,20 @@ object CheckCommand "by_ssh" {
 			value = "$by_ssh_options$"
 			description = "Provide ssh options (may be repeated)"
 		}
+		"-4" = {
+			set_if = "$by_ssh_ipv4$"
+			description = "Use IPv4 only"
+		}
+		"-6" = {
+			set_if = "$by_ssh_ipv6$"
+			description = "Use IPv6 only"
+		}
 	}
 
 	vars.by_ssh_address = "$check_address$"
 	vars.by_ssh_quiet = false
+	vars.check_ipv4 = "$by_ssh_ipv4$"
+	vars.check_ipv6 = "$by_ssh_ipv6$"
 }
 
 object CheckCommand "ups" {
@@ -1452,11 +1692,11 @@ object CheckCommand "nrpe" {
 		}
 		"-4" = {
 			set_if = "$nrpe_ipv4$"
-			description = "Use IPv4 only"
+			description = "Use IPv4 connection"
 		}
 		"-6" = {
 			set_if = "$nrpe_ipv6$"
-			description = "Use IPv6 only"
+			description = "Use IPv6 connection"
 		}
 	}
 
@@ -1672,12 +1912,22 @@ object CheckCommand "clamd" {
 			value = "$clamd_timeout$"
 			description = "Seconds before connection times out. Defaults to 10."
 		}
+		"-4" = {
+			set_if = "$clamd_ipv4$"
+			description = "Use IPv4 only"
+		}
+		"-6" = {
+			set_if = "$clamd_ipv6$"
+			description = "Use IPv6 only"
+		}
 	}
 
 	vars.clamd_ssl = false
 	vars.clamd_refuse = "crit"
 	vars.clamd_mismatch = "warn"
 	vars.clamd_timeout = 10
+	vars.check_ipv4 = "$clamd_ipv4$"
+	vars.check_ipv6 = "$clamd_ipv6$"
 }
 
 object CheckCommand "mailq" {
