Add running_kernel_use_sudo option for the running_kernel check
fixes #10693

--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -53,7 +53,25 @@ object CheckCommand "mem" {
 object CheckCommand "running_kernel" {
 	import "plugin-check-command"
 
-	command = [ "sudo", PluginContribDir + "/check_running_kernel" ]
+	command = {{
+		var use_sudo = macro("$running_kernel_use_sudo$")
+
+		if (use_sudo == null && PlatformName == "Ubuntu") {
+			use_sudo = true
+		}
+
+		var args
+
+		if (use_sudo) {
+			args = [ "sudo" ]
+		} else {
+			args = []
+		}
+
+		args += [ PluginContribDir + "/check_running_kernel" ]
+
+		return args
+	}}
 }
 
 object CheckCommand "yum" {
